Updating some images and project descriptions

--- a/_posts/2018-09-10-7-days-to-die.md
+++ b/_posts/2018-09-10-7-days-to-die.md
@@ -5,7 +5,7 @@ date:   2018-09-10 20:00:00 -0500
 category: Project
 tags: ['C++', 'Unity', 'C#', 'PS4', 'XBoxOne', 'IronGalaxy']
 showcase: true
-thumbnail: 'images/7-days-to-die.jpeg'
+thumbnail: 'images/7-days-to-die.jpg'
 author: "Sanjay Nambiar"
 comments: true
 ---
@@ -13,7 +13,7 @@ comments: true
 ## [7 Days to Die](https://www.microsoft.com/en-us/p/7-days-to-die/brl7gc0gp1bm#activetab=pivot:overviewtab)
 
 <div class='embed-container'>
-	<img src="{{ site.baseurl }}/images/7-days-to-die.jpeg">
+	<img src="{{ site.baseurl }}/images/7-days-to-die.jpg">
 </div>
 <br/>
 
@@ -22,18 +22,22 @@ comments: true
 
 #### What I worked on
 The game is built in Unity Engine and was originally built only for PC. Adapting this to consoles involved tackling a number of technical challenges, some of which are:
-1. Memory and performance constraints are much tighter on consoles compared to PC, so a lot of optimizations had to be done to get the game working on consoles. Some performance and memory intensive code was converted to native code to have better performance and tighter control of memory allocations. A lot of allocations were converted to use pooled allocators and the number of allocations themselves reduced for console.
-2. Texture size reduction was another improvement which saved a lot of graphics memory.
-3. Multi threading with pooled work queues were used extensively to spread the parallel work loads of terrain generation, loading assets etc.
-4. Most of the audio was set to be played via audio streaming to reduce memory usage.
+<ul style="padding-left: 5%">
+<li style="list-style-type: disc;"> Memory and performance constraints are much tighter on consoles compared to PC, so a lot of optimizations had to be done to get the game working on consoles. Some performance and memory intensive code was converted to native code to have better performance and tighter control of memory allocations. A lot of allocations were converted to use pooled allocators and the number of allocations themselves reduced for console.</li>
+<li style="list-style-type: disc;"> Texture size reduction was another improvement which saved a lot of graphics memory.</li>
+<li style="list-style-type: disc;"> Multi threading with pooled work queues were used extensively to spread the parallel work loads of terrain generation, loading assets etc.</li>
+<li style="list-style-type: disc;"> Most of the audio was set to be played via audio streaming to reduce memory usage.</li>
+</ul>
 
 I worked on this project about 7 months and these were the main tasks I worked on:
-1. Getting the game running on the console. This involved integrating PS4 and XboxOne native plugins for unity. These plugins provide platform specific APIs to save data handling, networking, user management etc.
-2. Upgrading Unity version - there were some custom code changes made to platform plugins and unity engine source itself. I merged some of these source code changes to the new version. This involved understanding the code and handling API changes and get the core features working.
-3. UI systems including title menu and in game UI interactions.
-4. Asset loading improvements such as splitting up loading sections into co-routines / threaded calls to improve loading times and keep the game responsive.
-5. Getting the controller inputs working and fixing in game object interactions.
-6. Improving graphics memory utilization bugs by reducing texture and render target resoultions.
-7. Memory profiling and eliminating extra allocs and finding potential places to convert them to pooled allocations.
+<ul style="padding-left: 5%">
+<li style="list-style-type: disc;"> Getting the game running on the console. This involved integrating PS4 and XboxOne native plugins for unity. These plugins provide platform specific APIs to save data handling, networking, user management etc.</li>
+<li style="list-style-type: disc;"> Upgrading Unity version - there were some custom code changes made to platform plugins and unity engine source itself. I merged some of these source code changes to the new version. This involved understanding the code and handling API changes and get the core features working.</li>
+<li style="list-style-type: disc;"> UI systems including title menu and in game UI interactions.</li>
+<li style="list-style-type: disc;"> Asset loading improvements such as splitting up loading sections into co-routines / threaded calls to improve loading times and keep the game responsive.</li>
+<li style="list-style-type: disc;"> Getting the controller inputs working and fixing in game object interactions.</li>
+<li style="list-style-type: disc;"> Improving graphics memory utilization bugs by reducing texture and render target resoultions.</li>
+<li style="list-style-type: disc;"> Memory profiling and eliminating extra allocs and finding potential places to convert them to pooled allocations.</li>
+</ul>
 
 Overall, this project gave me a chance to work with a great variety of technical challenges and I had the previlege of working with a super friendly and smart team.
